[package]
name = "libloading-bindgen"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.38", features = ["full", "extra-traits", "visit-mut"] }
bindgen = "0.54.1"
quote = "1.0.7"
thiserror = "1.0.20"
proc-macro2 = "1.0.19"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
anyhow = "1.0.32"
cbindgen = "0.14.3"
