[package]
name = "cargo-libloading-bindgen"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
libloading-bindgen = { path = ".." }
regex = "1.3.9"
syn = "1.0.38"
anyhow = "1.0.32"
bindgen = "0.54.1"
quote = "1.0.7"
